# async-api

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
ETL/: .env.example  config.py  docker_compose.yml
nginx/: Dockerfile
src/: .env.example  main.py  requirements.txt
src/api/v1/: films.py  genres.py  paginator.py  people.py
src/cache/: redis_cache.py
src/core/: config.py
src/models/: models.py
src/services/: film.py  genre.py  person.py
src/storage/: elastic_storage.py
tests/functional/: conftest.py  docker-compose.yml  settings.py
tests/functional/fixtures/: client.py  load_data.py
tests/functional/scr/: test_film.py  test_genre.py  test_person.py  test_search.py
tests/functional/testdata/: film_data.py  index_map.py  person_data.py
