[tool.poetry]
name = "async_api"
version = "0.1.0"
description = ""
authors = ["jcartwri <zah.1234@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
aioredis = "1.3.1"
elasticsearch = {version = "7.9.1", extras = ["async"]}
fastapi = "0.61.1"
uvicorn = "0.12.2"
uvloop = "0.17.0"
pydantic = "1.9.0"
orjson = "3.8"
python-dotenv = "0.20.0"
psycopg2-binary = "2.9.3"
requests = "2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
